force-app/main/default/objects/pmdm__ServiceDelivery__c/pmdm__ServiceDelivery__c.object-meta.xml
<CustomObject>
    <label>Service Delivery</label>
    <nameField>
        <label>Service Delivery Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Deliveries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>