force-app/main/default/objects/pmdm__ServiceDelivery__c/fields/Connection__c.field-meta.xml
<CustomField>
    <fullName>Connection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Connection</label>
    <referenceTo>pmdm__ServiceDelivery__c</referenceTo>
    <relationshipLabel>Service Deliveries</relationshipLabel>
    <relationshipName>Service_Deliveries</relationshipName>
    <type>Lookup</type>
</CustomField>