force-app/main/default/objects/pmdm__ServiceDelivery__c/fields/Connections_Flow_Selections__c.field-meta.xml
<CustomField>
    <fullName>Connections_Flow_Selections__c</fullName>
    <inlineHelpText>This field will be populated by the Create Connections Records Flow to identify the selected records in the flow.</inlineHelpText>
    <label>Connections Flow Selections</label>
    <length>255</length>
    <type>Text</type>
</CustomField>