force-app/main/default/objects/pmdm__ServiceDelivery__c/fields/pmdm__AttendanceStatus__c.field-meta.xml
<CustomField>
    <fullName>pmdm__AttendanceStatus__c</fullName>
    <label>Attendance Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Present</fullName>
            </value>
            <value>
                <fullName>Unexcused Absence</fullName>
            </value>
            <value>
                <fullName>Excused Absence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>