force-app/main/default/objects/pmdm__ServiceDelivery__c/fields/pmdm__AutonameOverride__c.field-meta.xml
<CustomField>
    <fullName>pmdm__AutonameOverride__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this is checked, the Service Delivery Name can be manually defined. It will not be auto-named.</description>
    <inlineHelpText>When this is checked, the Service Delivery Name can be manually defined. It will not be auto-named.</inlineHelpText>
    <label>Auto-name Override</label>
    <type>Checkbox</type>
</CustomField>