force-app/main/default/objects/pmdm__ServiceDelivery__c/fields/pmdm__Contact__c.field-meta.xml
<CustomField>
    <fullName>pmdm__Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Client</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Deliveries</relationshipLabel>
    <relationshipName>Service_Deliveries</relationshipName>
    <type>Lookup</type>
</CustomField>