force-app/main/default/objects/pmdm__ServiceDelivery__c/fields/pmdm__DeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>pmdm__DeliveryDate__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>