force-app/main/default/objects/pmdm__ServiceDelivery__c/fields/pmdm__HouseholdBenefit__c.field-meta.xml
<CustomField>
    <fullName>pmdm__HouseholdBenefit__c</fullName>
    <formula>NOT(ISBLANK(pmdm__Account__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Household Benefit</label>
    <type>Checkbox</type>
</CustomField>