force-app/main/default/objects/pmdm__ServiceDelivery__c/fields/pmdm__ProgramEngagement__c.field-meta.xml
<CustomField>
    <fullName>pmdm__ProgramEngagement__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Program Engagement</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>Contact must match the Contact in the Program Engagement.</errorMessage>
        <filterItems>
            <field>pmdm__ProgramEngagement__c.pmdm__Contact__c</field>
            <operation>equals</operation>
            <valueField>$Source.pmdm__Contact__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.pmdm__Contact__c</field>
            <operation>equals</operation>
            <value/>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>pmdm__ProgramEngagement__c</referenceTo>
    <relationshipLabel>Service Deliveries</relationshipLabel>
    <relationshipName>ServiceDeliveries</relationshipName>
    <type>Lookup</type>
</CustomField>