force-app/main/default/objects/pmdm__ServiceDelivery__c/fields/pmdm__Quantity__c.field-meta.xml
<CustomField>
    <fullName>pmdm__Quantity__c</fullName>
    <description>A 2-decimal numeric field for Quantity of a Service Delivery expressed in the Unit of Measurement in the Service. For example, 30 minutes of tutoring where the Unit of Measure is hours, Quantity is .50.</description>
    <inlineHelpText>A 2-decimal numeric field for Quantity of a Service Delivery expressed in the Unit of Measurement in the Service. For example, 30 minutes of tutoring where the Unit of Measure is hours, Quantity is .50.</inlineHelpText>
    <label>Quantity</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>