force-app/main/default/objects/pmdm__ServiceDelivery__c/fields/pmdm__Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>pmdm__Service_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>An internal service provider or a partner organization&apos;s service provider that&apos;s been added as a Contact in your database.</description>
    <inlineHelpText>An internal service provider or a partner organization&apos;s service provider that&apos;s been added as a Contact in your database.</inlineHelpText>
    <label>Service Provider</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Deliveries (Service Provider)</relationshipLabel>
    <relationshipName>ServiceDeliveries</relationshipName>
    <type>Lookup</type>
</CustomField>