force-app/main/default/objects/pmdm__ServiceDelivery__c/fields/pmdm__ServiceSession__c.field-meta.xml
<CustomField>
    <fullName>pmdm__ServiceSession__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Session</label>
    <referenceTo>pmdm__ServiceSession__c</referenceTo>
    <relationshipLabel>Service Deliveries</relationshipLabel>
    <relationshipName>ServiceDeliveries</relationshipName>
    <type>Lookup</type>
</CustomField>