force-app/main/default/objects/pmdm__ServiceDelivery__c/fields/pmdm__UnitOfMeasurement__c.field-meta.xml
<CustomField>
    <fullName>pmdm__UnitOfMeasurement__c</fullName>
    <description>A formula field that displays the UnitOfMeasurement__c field from the Service object.</description>
    <formula>pmdm__Service__r.pmdm__UnitOfMeasurement__c</formula>
    <inlineHelpText>The Unit of Measurement from the related Service.</inlineHelpText>
    <label>Unit of Measurement</label>
    <type>Text</type>
</CustomField>