force-app/main/default/objects/pmdm__ServiceDelivery__c/validationRules/pmdm__ACCOUNT_MATCHES_CONTACT_ACCOUNT.validationRule-meta.xml
<ValidationRule>
    <fullName>pmdm__ACCOUNT_MATCHES_CONTACT_ACCOUNT</fullName>
    <active>true</active>
    <description>Account lookup must match the related Contact&apos;s Account.</description>
    <errorConditionFormula>AND(
!ISBLANK(pmdm__Contact__c),
!ISBLANK(pmdm__Account__c),
pmdm__Contact__r.AccountId !=  pmdm__Account__c
)</errorConditionFormula>
    <errorMessage>Select an Account that matches the related Contact.</errorMessage>
</ValidationRule>