force-app/main/default/objects/pmdm__ServiceDelivery__c/validationRules/pmdm__PROGRAM_MATCH.validationRule-meta.xml
<ValidationRule>
    <fullName>pmdm__PROGRAM_MATCH</fullName>
    <active>true</active>
    <description>The Service&apos;s Program must match the Program Engagement&apos;s Program when Program Engagement is populated.</description>
    <errorConditionFormula>AND(
!ISBLANK(pmdm__ProgramEngagement__c),
!ISBLANK(pmdm__Service__c),
pmdm__Service__r.pmdm__Program__c != pmdm__ProgramEngagement__r.pmdm__Program__c
)</errorConditionFormula>
    <errorMessage>Select a Program Engagement that matches the Program of the related Service.</errorMessage>
</ValidationRule>